# OpenCellular

./: .dir-locals.el  .gitignore  Android.mk  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CREDITS  GNUmakefile  LICENSE-SOFTWARE  Makefile  Makefile.am  Makefile.inc  Makefile.proof  README  README.md  TODO  WATCHLISTS  aes_ref.c  autogen.sh  bct_dump.c  build.mk  cbootimage.c  cbootimage.h  common.mk  configure.ac  context.c  context.h  crypto.c  crypto.h  data_layout.c  data_layout.h  emerge_test.sh  gnat.adc  nvaes_ref.h  nvbctlib.h  nvbctlib_ap20.c  nvboot_bct.h  nvboot_sdram_param.h  parse.c  parse.h  (+5 more)
.ci/: clang_patch  coverage.py
.github/: pull_request_template.md
ada/: Makefile.inc
bdb/: Makefile  bdb.c
c/: hw-file.c
cgpt/: CgptManager.cc  CgptManager.h  Makefile  cgpt.c  cgpt.h  cgpt_add.c  cgpt_boot.c  cgpt_common.c  cgpt_create.c  cgpt_find.c  cgpt_legacy.c  cgpt_nor.c  cgpt_nor.h  cgpt_params.h  cgpt_prioritize.c  cgpt_repair.c  cgpt_show.c  cgpt_wrapper.c  cmd_add.c  cmd_boot.c  cmd_create.c  cmd_find.c  cmd_legacy.c  cmd_prioritize.c  cmd_repair.c  cmd_show.c  drive.c  drive.h  endian.h  flash_ts.c  flash_ts_api.h  flash_ts_drv.c
cgptlib/: Makefile  cgpt.c  cgpt.h  cgpt_internal.h  cgptlib.c  cgptlib.h  cgptlib_internal.h  crc32.c  gpt.h
classes/: sysmocom-module.bbclass
common/: Makefile  Makefile.inc  hw-config.ads.template  hw-file.ads  hw-gfx-dp_aux_ch.adb  hw-gfx-dp_aux_ch.ads  hw-gfx-dp_defs.ads  hw-gfx-dp_info.adb  hw-gfx-dp_info.ads  hw-gfx-dp_training.adb  hw-gfx-dp_training.ads  hw-gfx-edid.adb  hw-gfx-edid.ads  hw-gfx-framebuffer_filler.adb  hw-gfx-framebuffer_filler.ads  hw-gfx-gma-config.ads.template  hw-gfx-gma-config_helpers.adb  hw-gfx-gma-config_helpers.ads  hw-gfx-gma-connector_info.adb  hw-gfx-gma-connector_info.ads  hw-gfx-gma-connectors.ads  hw-gfx-gma-display_probing.adb  hw-gfx-gma-display_probing.ads  hw-gfx-gma-dp_aux_ch.ads  hw-gfx-gma-dp_aux_request.adb  hw-gfx-gma-dp_aux_request.ads  hw-gfx-gma-dp_info.ads  hw-gfx-gma-i2c.adb  hw-gfx-gma-i2c.ads  hw-gfx-gma-panel.adb  hw-gfx-gma-panel.ads  hw-gfx-gma-pch-fdi.adb  hw-gfx-gma-pch-fdi.ads  hw-gfx-gma-pch-sideband.adb  hw-gfx-gma-pch-sideband.ads  hw-gfx-gma-pch-transcoder.adb  hw-gfx-gma-pch-transcoder.ads  hw-gfx-gma-pch-vga.adb  hw-gfx-gma-pch-vga.ads  hw-gfx-gma-pch.ads  (+27 more)
configs/: broadwell  broadwell_ult  defconfig  haswell  haswell_ult  ironlake  ivybridge_edp  ivybridge_lvds  posix  sandybridge  skylake  skylake_ult
contrib/: dump_docs.py  jenkins_bts_trx.sh  jenkins_common.sh  jenkins_lc15.sh  jenkins_oct.sh  jenkins_oct_and_bts_trx.sh  jenkins_sysmobts.sh  l1fwd.init  lc15bts-mgr.service  osmo-bts-sysmo.service  respawn.sh  sysmobts-mgr.service
contrib/systemd/: Makefile.am  osmo-bts-lc15.service  osmo-bts-trx.service
crypto/: Makefile  genpadding.sh  padding.c  rsa.c  rsa_utility.c  sha1.c  sha2.c  sha_utility.c
cryptolib/: Makefile  sha1.c  sha2.c
debian/: osmo-bts-virtual.install  rules
debug/: hw-debug.adb  hw-debug.ads
doc/: control_interface.txt
doc/examples/: Makefile.am
doc/examples/litecell15/: osmo-bts-lc15.cfg  osmo-bts.cfg
doc/examples/octphy/: osmo-bts-trx2dsp1.cfg
doc/examples/sysmo/: osmo-bts.cfg  sysmobts-mgr.cfg
doc/examples/trx/: osmo-bts-trx-calypso.cfg  osmo-bts-trx.cfg
doc/examples/virtual/: openbsc-virtual.cfg
docs/: README
documentation/: binary_policy.md
electronics/: README
firmware/: Makefile  OpenCellular.cfg  OpenCellular.cmd  README  coding_style_guide  version.c
futility/: IGNOREME.c  bdb_helper.c  cmd_bdb.c  cmd_create.c  cmd_dev_sign_file.c  cmd_dump_fmap.c  cmd_dump_kernel_config.c  cmd_foo.c  cmd_gbb_utility.c  cmd_hey.c  cmd_load_fmap.c  cmd_pcr.c  cmd_show.c  cmd_sign.c  cmd_validate_rec_mrc.c  cmd_vb2_verify_fw.c  cmd_vbutil_firmware.c  cmd_vbutil_kernel.c  cmd_vbutil_kernel0.c  cmd_vbutil_key.c  cmd_vbutil_keyblock.c  cmd_verify_kernel.c  dump_kernel_config_lib.c  file_type.c  file_type.h  file_type.inc  file_type_bios.c  file_type_rwsig.c  file_type_usbpd1.c  futility.c  futility.h  futility.lds  futility_options.h  kernel_blob.h  misc.c  ryu_root_header.c  traversal.c  traversal.h  vb1_helper.c  vb1_helper.h  (+1 more)
gfxtest/: Makefile.inc  gfx_test.adb  gfx_test.ads  gfx_test.sh  gfx_test_main.adb  hw-gfx-gma-gfx_test.adb  hw-gfx-gma-gfx_test.ads
host/: Makefile
include/: file_keys.h  firmware_image.h  firmware_image_fw.h  firmware_utility.h  kernel_image.h  kernel_image_fw.h  kernel_utility.h  padding.h  rsa.h  rsa_utility.h  sha.h  sha_utility.h  signature_digest.h  tlcl.h  utility.h
misclibs/: Makefile  file_keys.c  signature_digest.c
msc/: README.txt  nmakefile
octal/: rffe.tgz
proof/: Makefile.inc  hw-mmio_range.adb
samples/: sign.sh
scripts/: getversion.sh  make-stable.sh  sign_data.sh
software/: .cproject  .project  forecast.sln
software/tools/linuxkit/projects/miragesdk/src/: sdk.opam
src/: Makefile.am  bct_dump.c  cbootimage.c  cbootimage.h  context.c  crypto.c  crypto.h  data_layout.c  data_layout.h  nvaes_ref.h  parse.c  parse.h  set.c  (+1 more)
src/osmo-bts-litecell15/: Makefile.am  l1_if.h  lc15bts.h  lc15bts_vty.c  oml.c  tch.c  utils.c
src/osmo-bts-litecell15/misc/: lc15bts_bid.c  lc15bts_bts.h  lc15bts_led.c  lc15bts_mgr.h  lc15bts_mgr_vty.c  lc15bts_nl.h  lc15bts_par.c  lc15bts_power.c  lc15bts_swd.h  lc15bts_temp.h  lc15bts_util.c
src/osmo-bts-octphy/: Makefile.am  l1_if.c  l1_if.h  l1_oml.c  main.c  octpkt.c  octpkt.h
src/osmo-bts-sysmo/: Makefile.am  calib_file.c  calib_fixup.c  eeprom.h  hw_misc.c  l1_fwd.h  l1_if.c  l1_if.h  sysmobts_vty.c  tch.c  utils.c  utils.h
src/osmo-bts-sysmo/misc/: sysmobts-calib.c  sysmobts-layer1.h  sysmobts_mgr_2050.c  sysmobts_mgr_calib.c  sysmobts_mgr_vty.c  sysmobts_util.c
src/osmo-bts-virtual/: Makefile.am  l1_if.c  main.c  osmo_mcast_sock.c  scheduler_virtbts.c  virtual_um.c
tests/agch/: Makefile.am
tests/misc/: Makefile.am  misc_test.c  misc_test.ok
tests/paging/: Makefile.am  paging_test.c
tests/power/: Makefile.am
tests/sysmobts/: Makefile.am  sysmobts_test.c
tests/tx_power/: Makefile.am  tx_power_test.ok
(+6684 files in other folders)
