opam-version: "1.2"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      "Thomas Gazagnaire <thomas@gazagnaire.org>"
homepage:     "https://github.com/linuxkit/linuxkit"
bug-reports:  "https://github.com/linuxkit/linuxkit/issues"
license:      "Apache"
dev-repo:     "https://github.com/linuxkit/linuxkit.git"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder"  {build & >= "1.0+beta10"}
  "cstruct"
  "lwt"
  "logs"
  "astring"
  "mirage-time-lwt"
  "mirage-flow-lwt"  {>= "1.4.0"}
  "mirage-flow-unix" {>= "1.4.0"}
  "mirage-flow-rawlink"
  "irmin-mem"
  "capnp-rpc-lwt"
  "rawlink"
  "tuntap" {= "1.0.0"}
  "ipaddr"
  "mirage-net-flow"
  "mirage-net-fd"
  "charrua-core"
  "alcotest" {test}
]
